# jericho

./: Cargo.toml
src/jericho/: main.rs
src/jericho/parser/: arguments.rs  mod.rs
src/jericho/reminders/: mod.rs  reminder_handler.rs
src/jericho/server/: mod.rs  tcp_sender.rs
src/jericho_daemon/: main.rs
